--- a/templates/login.html
+++ b/templates/login.html
@@ -1,15 +1,17 @@
-{% extends 'base.html' %}
-
-{% block title %}Log In{% endblock %}
+{% extends "base.html" %}
 
 {% block content %}
 <div class="container">
     <h2>Log In</h2>
-    <form method="POST" action="/login">
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
+    <form action="{{ url_for('auth.login') }}" method="post">
+        <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" class="form-control" placeholder="Enter your email" required>
+        </div>
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" class="form-control" placeholder="Enter your password" required>
+        </div>
         <button type="submit" class="btn btn-primary">Log In</button>
     </form>
 </div>
