--- a/templates/base.html
+++ b/templates/base.html
@@ -14,36 +14,41 @@
     <header class="bg-primary text-white py-3">
         <div class="container d-flex justify-content-between align-items-center">
             <!-- Logo -->
-            <a href="{{ url_for('expenses.landing_page') }}" class="nav-link text-white" class="logo mb-0">
+            <a href="{{ url_for('main.landing_page') }}" class="nav-link text-white" class="logo mb-0">
                 <h1>Budget Buddy</h1>
             </a>
             <!-- Navigation bar -->
-            <nav>
-                <ul class="nav">
-                    {% if session.get('user_id') %}
-                        <!-- Navigation links for authenticated users -->
-                        <li class="nav-item">
-                            <a href="{{ url_for('expenses.index') }}" class="nav-link text-white">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="{{ url_for('expenses.spending_report') }}" class="nav-link text-white">Spending Report</a>
-                        </li>
-                        <li class="nav-item">
-                            <span class="nav-link text-white">Welcome, {{ session.get('username') }}</span>
-                        </li>
-                        <li class="nav-item">
-                            <a href="{{ url_for('auth.logout') }}" class="nav-link text-white">Log Out</a>
-                        </li>
-                    {% else %}
-                        <!-- Navigation links for unauthenticated users -->
-                        <li class="nav-item">
-                            <a href="{{ url_for('auth.login') }}" class="nav-link text-white">Log In</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="{{ url_for('auth.signup') }}" class="nav-link text-white">Sign Up</a>
-                        </li>
-                    {% endif %}
-                </ul>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+                    <ul class="nav">
+                        {% if session.get('user_id') %}
+                            <!-- Navigation links for authenticated users -->
+                            <li class="nav-item">
+                                <a href="{{ url_for('main.index') }}" class="nav-link text-white">Home</a>
+                            </li>
+                            
+                            <!-- Dropdown for the username -->
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    {{ session.get('username') }}
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="{{ url_for('main.acc_detail') }}">Account Details</a></li>
+                                    <li><a class="dropdown-item" href="{{ url_for('main.group') }}">Create Group</a></li>
+                                    <li><a class="dropdown-item" href="{{ url_for('auth.logout') }}">Log Out</a></li>
+                                </ul>
+                            </li>
+                        {% else %}
+                            <!-- Navigation links for unauthenticated users -->
+                            <li class="nav-item">
+                                <a href="{{ url_for('auth.login') }}" class="nav-link text-white">Log In</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="{{ url_for('auth.signup') }}" class="nav-link text-white">Sign Up</a>
+                            </li>
+                        {% endif %}
+                    </ul>
+                </div>
             </nav>
         </div>
     </header>
