--- a/templates/login.html
+++ b/templates/login.html
@@ -3,16 +3,17 @@
 {% block content %}
 <div class="container">
     <h2>Log In</h2>
-    <form action="{{ url_for('auth.login') }}" method="post">
+    <form method="POST" action="{{ url_for('auth.login') }}">
         <div class="form-group">
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" class="form-control" placeholder="Enter your email" required>
+            <label for="username">Username</label>
+            <input type="text" name="username" id="username" class="form-control" required>
         </div>
         <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" id="password" name="password" class="form-control" placeholder="Enter your password" required>
+            <input type="password" name="password" id="password" class="form-control" required>
         </div>
-        <button type="submit" class="btn btn-primary">Log In</button>
+        <button type="submit" class="btn btn-primary">Login</button>
     </form>
+    
 </div>
 {% endblock %}
